Changelog
=========

0.2 (unreleased)
----------------

- Fixed an error happening with anonymous users. [vincent]


0.1 (2012-01-12)
----------------

- Initial release [vincent]